Removed all duplicates from the dictionary

--- a/W.O.R.D.S/W.O.R.D.S.csproj
+++ b/W.O.R.D.S/W.O.R.D.S.csproj
@@ -353,6 +353,9 @@
     <Content Include="Icons\net.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Icons\normal.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icons\obey.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
