--- a/W.O.R.D.S/W.O.R.D.S.csproj
+++ b/W.O.R.D.S/W.O.R.D.S.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Models\Context.cs" />
     <Compile Include="Models\Converters\ExampleConverter.cs" />
     <Compile Include="Models\Converters\ExampleListConverter.cs" />
+    <Compile Include="Models\Converters\FavConverter.cs" />
     <Compile Include="Models\Converters\NoteConverter.cs" />
     <Compile Include="Models\Converters\NoteImageConverter.cs" />
     <Compile Include="Models\Converters\OpacityConverter.cs" />
