Thesaurus on main menu

--- a/W.O.R.D.S/W.O.R.D.S.csproj
+++ b/W.O.R.D.S/W.O.R.D.S.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Models\DTO\Status.cs" />
     <Compile Include="Models\DTO\WordClass.cs" />
     <Compile Include="Models\Info\Thesaurus.cs" />
+    <Compile Include="Models\Info\ThesaurusInfo.cs" />
     <Compile Include="Models\Learning.cs" />
     <Compile Include="ViewModels\EditViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
